codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 2968
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. gpt-5.2-codex (default)          Latest frontier agentic coding model.
  2. gpt-5.2                          Latest frontier model with improvements
                                      across knowledge, reasoning and coding
  3. gpt-5.1-codex-max                Codex-optimized flagship for deep and
                                      fast reasoning.
  4. gpt-5.1-codex-mini               Optimized for codex. Cheaper, faster,
                                      but less capable.
  5. GLM-4.5 Air (free)               Zhipu AI's GLM-4.5 model via OpenRouter.
  6. MiMo-V2-Flash (free)             Xiaomi's 309B MoE model. Top open-source
                                      on SWE-bench.
  7. Gemini 2.0 Flash                 Google's Gemini 2.0 Flash model via
                                      OpenRouter.
  8. Gemini 3 Flash Preview           Google's Gemini 3 Flash preview model

  Press enter to select reasoning effort, or esc to dismiss.
